--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "@stryker-mutator/jest-runner": "^2.0.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
-    "prettier": "1.18.2"
+    "prettier": "1.18.2",
+    "prettier-eslint": "^9.0.0"
   }
 }
