--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --single-quote --write",
+      "eslint --ignore-path .gitignore .",
       "git add"
     ]
   },
