Add eslint rule to ignore prop-types warnings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/prop-types": 0
   },
   "settings": {
     "react": {
