Fix prop type validation
Revert rule from commit 6485ced0 to suppress validation errors.

Add props validation for TODOItem.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,7 @@
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "prettier/prettier": "error",
-    "react/prop-types": 0
+    "prettier/prettier": "error"
   },
   "settings": {
     "react": {
