Add optional linter options
There is no need for console statements on push, thus throw error.
Enforce type safety for comparison operators.
Uniformly use dot notations for objects.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,10 @@
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "eqeqeq": "error",
+    "no-console": "error",
+    "dot-notation": "error"
   },
   "settings": {
     "react": {
