Add unit testing dependencies for react
Jest: test runner, assertion library, mocking library
Enzyme: additional testing utilities for interacting with elements

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     },
     "coverageReporters": [
       "text"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
     ]
   },
   "scripts": {
@@ -64,6 +67,9 @@
     "@stryker-mutator/html-reporter": "^2.0.2",
     "@stryker-mutator/javascript-mutator": "^2.0.2",
     "@stryker-mutator/jest-runner": "^2.0.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
     "eslint-config-prettier": "^6.0.0",
