Revert error thrown by console.log()
For testing purposes you don't want console to throw an error but a warning is sufficient

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "react/jsx-uses-vars": "error",
     "prettier/prettier": "error",
     "eqeqeq": "error",
-    "no-console": "error",
+    "no-console": "warn",
     "dot-notation": "error",
     "no-unused-vars": "warn",
     "semi": [2, "always"]
