--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -9,11 +9,11 @@
 .stryker-tmp
 
 # testing
-/coverage
-/reports
+/frontend/coverage
+/frontend/reports
 
 # production
-/build
+/frontend/build
 
 # misc
 .DS_Store
