--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "lint-staged": "^9.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.0.1"
   },
   "husky": {
     "hooks": {
