--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build:
     - npm run build
   artifacts:
     paths:
-      - build/ # keep built files for deployment as artifacts
+      - frontend/build/ # keep built files for deployment as artifacts
 
 # staging step before production
 staging:
@@ -50,7 +50,7 @@ staging:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
     # rsync built files to the docker build stage
-    - rsync -ave "ssh -p $VPS_PORT_STAGING" --delete build $VPS_USER@$VPS_IP_STAGING:/home/$VPS_USER/docker/
+    - rsync -ave "ssh -p $VPS_PORT_STAGING" --delete frontend/build $VPS_USER@$VPS_IP_STAGING:/home/$VPS_USER/docker/
     # run docker-compose with nginx
     - ssh -p $VPS_PORT_STAGING $VPS_USER@$VPS_IP_STAGING "cd docker/ && docker-compose down && docker-compose up -d"
   cache: {}
@@ -76,7 +76,7 @@ production:
     - ssh-keyscan -p $VPS_PORT_PRODUCTION -H $VPS_IP_PRODUCTION >> ~/.ssh/known_hosts
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
-    - rsync -ave "ssh -p $VPS_PORT_PRODUCTION" --delete build $VPS_USER@$VPS_IP_PRODUCTION:/home/$VPS_USER/docker/
+    - rsync -ave "ssh -p $VPS_PORT_PRODUCTION" --delete frontend/build $VPS_USER@$VPS_IP_PRODUCTION:/home/$VPS_USER/docker/
     - ssh -p $VPS_PORT_PRODUCTION $VPS_USER@$VPS_IP_PRODUCTION "cd docker/ && docker-compose down && docker-compose up
       -d"
   cache: {}
