--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ staging:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
     # rsync built files to the docker build stage
-    - rsync -ave "ssh -p $VPS_PORT_STAGING" --delete frontend/build backend $VPS_USER@$VPS_IP_STAGING:/home/$VPS_USER/docker/
+    - rsync -ave "ssh -p $VPS_PORT_STAGING" frontend/build backend $VPS_USER@$VPS_IP_STAGING:/home/$VPS_USER/docker/
     # run docker-compose with nginx
     - ssh -p $VPS_PORT_STAGING $VPS_USER@$VPS_IP_STAGING "cd docker/ && docker-compose down && docker-compose up --build -d"
   cache: {}
