--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "prettier": "1.18.2",
-    "prettier-eslint": "^9.0.0"
+    "prettier-eslint": "^9.0.0",
+    "react-color": "^2.17.3"
   }
 }
