--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,7 @@
     "@stryker-mutator/javascript-mutator": "^2.0.2",
     "@stryker-mutator/jest-runner": "^2.0.2",
     "axios": "^0.19.0",
+    "babel-eslint": "^10.0.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
@@ -79,8 +80,10 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "formik": "^1.5.8",
     "prettier": "1.18.2",
     "prettier-eslint": "^9.0.0",
-    "react-color": "^2.17.3"
+    "react-color": "^2.17.3",
+    "yup": "^0.27.0"
   }
 }
