--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -3,5 +3,6 @@ django-cors-headers==3.0.2
 djangorestframework==3.10.1
 gunicorn==19.9.0
 psycopg2-binary==2.8.3
+django-registration==3.0.1
 pytz==2019.1
 sqlparse==0.3.0
