--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ atomicwrites==1.3.0
 attrs==19.1.0
 autopep8==1.4.4
 Click==7.0
+confusable-homoglyphs==3.2.0
 decorator==4.4.0
 Django==2.2.3
 django-admin==1.3.2
 django-cors-headers==3.0.2
 django-db==0.0.7
 django-excel-response2==2.0.8
+django-registration==3.0.1
 django-six==1.0.4
 djangorestframework==3.9.4
 docopt==0.6.2
