--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,11 +77,11 @@ production:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
     - rsync -ave "ssh -p $VPS_PORT_PRODUCTION" --delete frontend/build $VPS_USER@$VPS_IP_PRODUCTION:/home/$VPS_USER/docker/
-    - ssh -p $VPS_PORT_PRODUCTION $VPS_USER@$VPS_IP_PRODUCTION "cd docker/ && docker-compose down && docker-compose up
-      -d"
+    - ssh -p $VPS_PORT_PRODUCTION $VPS_USER@$VPS_IP_PRODUCTION "cd docker/ && echo $ENV_STAGING >> .env && docker-compose down && docker-compose up --build -d"
   cache: {}
   only:
     - master
+    - server
   environment:
     name: production
     url: http://$VPS_IP_PRODUCTION/
